--- a/Frontend/react-project/package.json
+++ b/Frontend/react-project/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "antd": "^6.2.0",
     "fontawesome": "^5.6.3",
+    "framer-motion": "^12.27.5",
     "jwt-decode": "^4.0.0",
     "object-to-formdata": "^4.5.1",
     "react": "^19.2.0",
